fix(CartListItem): change align-items property value
"align-items: end" has mixed support, it is better to use "align-items: flex-end"

--- a/src/components/Cart/CartListItem.module.css
+++ b/src/components/Cart/CartListItem.module.css
@@ -1,7 +1,7 @@
 .cart-item {
   display: flex;
   justify-content: space-between;
-  align-items: end;
+  align-items: flex-end;
   border-bottom: 2px solid #8a2b06;
   padding: 1rem 0;
   margin: 1rem 0;
